force-app/main/default/objects/Forecast_Summary_History__c/Forecast_Summary_History__c.object-meta.xml
<CustomObject>
    <label>Forecast Summary History</label>
    <pluralLabel>Forecast Summary Histories</pluralLabel>
    <nameField>
        <label>Summary History Number</label>
        <type>AutoNumber</type>
        <displayFormat>FSH-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>