force-app/main/default/objects/Forecast_Summary_History__c/fields/Computed_Value__c.field-meta.xml
<CustomField>
    <fullName>Computed_Value__c</fullName>
    <label>Computed Value</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>