force-app/main/default/objects/Forecast_Summary_History__c/fields/Deal_Count__c.field-meta.xml
<CustomField>
    <fullName>Deal_Count__c</fullName>
    <label>Deal Count</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
</CustomField>