force-app/main/default/objects/Forecast_Summary_History__c/fields/Effective_Value__c.field-meta.xml
<CustomField>
    <fullName>Effective_Value__c</fullName>
    <label>Effective Value</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>