force-app/main/default/objects/Forecast_Summary_History__c/fields/Forecast_Summary__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Summary__c</fullName>
    <label>Forecast Summary</label>
    <type>MasterDetail</type>
    <referenceTo>Forecast_Summary__c</referenceTo>
    <relationshipName>Summary_History_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>