force-app/main/default/objects/Forecast_Summary_History__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <type>Text</type>
    <length>255</length>
</CustomField>