force-app/main/default/objects/Forecast_Summary_History__c/fields/Override_Active__c.field-meta.xml
<CustomField>
    <fullName>Override_Active__c</fullName>
    <label>Override Active</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>