force-app/main/default/objects/Forecast_Summary_History__c/fields/Snapshot_Type__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Type__c</fullName>
    <label>Snapshot Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Cadence</fullName><default>false</default><label
        >Cadence</label></value>
            <value><fullName>Submit</fullName><default>false</default><label
        >Submit</label></value>
            <value><fullName>Freeze</fullName><default>false</default><label
        >Freeze</label></value>
            <value><fullName>Manual</fullName><default>false</default><label
        >Manual</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>